# dev_mode

./: README.md  README_WINDOWS.md  app.py  brightness_controller.py  config.py  dev_mode.bat  dev_mode.py  font_renderer.py  ide_detector.py  label_renderer.py  music_detector.py  preset_applier.py  presets_manager.py  preview.py  pyproject.toml  run_dev_mode.py  ui_components.py
AppDir/: dev_mode.desktop
release/: MANIFEST.in  README_EXECUTAR.md  build.sh  build_executable.py  dev_mode.desktop  dev_mode.spec  install.sh  launch_dev_mode.sh  pyproject.toml  setup.sh
src/dev_mode/: __init__.py  __main__.py  app.py  brightness_controller.py  config.py  font_renderer.py  ide_detector.py  label_renderer.py  preset_applier.py  presets_manager.py  resources.py  ui_components.py
